- Added InvisFrameCommand for Elite Rank like me (thanks Comrade) - Added 2 more images MayaChan HUD <3 - Improved AutoBeacon supposedly? with better verification - ItemDespawn now save id for timer - Some rename (the dot...) and cleanup for the rest of the module - Dev build 5